--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,13 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
+Exercise1-Solution/bin/
+Exercise1-Solution/obj/
+Exercise1-Solution/packages/
+Exercise1-Solution/TestResults/
+
+Exercise1-Solution.UnitTests/bin/
+Exercise1-Solution.UnitTests/obj/
 # User-specific files
 *.rsuser
 *.suo
